[package]
name = "unlimit-connector"
version = "0.2.0"
edition = "2021"
authors = ["gorin <mxmgorin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

http = "0.2"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
futures = "*"
futures-util = { version = "*", default-features = false }
futures-core = { version = "*", default-features = false }
futures-channel = "*"
reqwest = { version = "*", features = ["json"] }
url = "*"
error-chain = { version = "0.12.4", default-features = false }
hmac = "*"
sha2 = "*"
hex = "*"
serde_qs = "*"
ring = "0.16.20"